030-software/fluxcd/apps/matrix/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: synapse
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: synapse
---
apiVersion: v1
kind: Service
metadata:
  name: element-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: element-web
